--- a/app/src/views/home/login.ejs
+++ b/app/src/views/home/login.ejs
@@ -3,15 +3,27 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script src="/js/home/login.js" defer></script> 
-
-  <title>Document</title>
+  <title>로그인</title>
+  <link rel="stylesheet" href="/css/home/login.css">
+  <script src="/js/home/login.js" defer></script>
 </head>
 <body>
-<input id="id" type="text" placeholder="아이디"><br>
-<input id="psword" type="text" placeholder="비밀번호"><br>
-<button>로그인</button>
- 
-
+  <div class="login-page">
+    <div class="form">
+      <!-- <form class="register-form">
+        <input type="text" placeholder="name"/>
+        <input type="password" placeholder="password"/>
+        <input type="text" placeholder="email address"/>
+        <button>create</button>
+        <p class="message">Already registered? <a href="#">Sign In</a></p>
+      </form> -->
+      <form class="login-form">
+        <input id="id" type="text" placeholder="아이디 "/>
+        <input id="psword" type="password" placeholder="비밀번호"/>
+        <p id="button">로그인</p>
+        <p class="message">회원이 아니신가요? <a href="/register">회원가입</a></p>
+      </form>
+    </div>
+  </div>
 </body>
 </html>
